tests/paczka2/big_fuzzy/28503194.err
Error in line 3: W8j6xy8b A432 87,7
Error in line 17: W8j6xy8b S861 40,3
Error in line 29: W8j6xy8b A432 51,1
Error in line 32: W8j6xy8b S938 56,2
Error in line 55: XdBzrwlZ1 S938 89,7
Error in line 57: W8j6xy8b A432 6,8
Error in line 59: XdBzrwlZ1 S861 18,1
Error in line 84: W8j6xy8b S938 i8,9
Error in line 68: W8j6xy8b A524 41,5
Error in line 62: 39YXJ A524 44,7
Error in line 82: XdBzrwlZ1 A524 61,2
Error in line 95: OIOze A432 65,2
Error in line 98: 39YXJ S861 14,2
Error in line 90: ZJo A524 89,0
Error in line 99: W8j6xy8b S938 357,1
Error in line 128: 39YXJ A432 3,1
Error in line 141: W8j6xy8b A524 16,1
Error in line 135: XdBzrwlZ1 A524 9,0
Error in line 162: S938 A524 93,8
Error in line 187: S938 S861 230,3
Error in line 149: W8j6xy8b S938 53,3
Error in line 194: 39YXJ S861 77,7
Error in line 192: W8j6xy8b A432 31,8
Error in line 199: dcw A432 19,9
Error in line 204: W8j6xy8b A524 73,4
Error in line 206: dcw S938 41,0
Error in line 212: dcw S861 44,4
Error in line 214: XdBzrwlZ1 A524 70,2
Error in line 236: ê
Error in line 245: XdBzrwlZ1 A432 60,2
Error in line 224: ZJo A524 29,0
